# adversarial-attacks-defense

./: README.md  model.py  orthogonalRegularization.py  pyproject.toml  spectralNormalization.py  utils.py
Attacking_techniques/: MIM.py  PGD.py  fgsm.py
Defense_techniques/: adversarial_training.py  gradient_regularization.py  multiattack.py  spectralNormalization.py
archive/: fgsm.py
