[tool.poetry]
name = "assignment3-2024-advengers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^2.1.3"
tqdm = "^4.67.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
